--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,8 @@
   
  <div align="center">
    <div class="middleimagecontainer">
-      <img src="~/image/otop.jpg" alt="otopark"/>
+     <img src="~/image/otop.jpg'" alt="Sample Image" width="300px" />
+    
     </div>
   <button class="btn btn1">Yönetici Girişi</button></br>
  <button class="btn btn2">Kullanıcı Girişi</button></br>
